<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    tools:context=".activity.NorthernActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                style="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:fontFamily="@font/times_new_roman"
                android:text="@string/cook"/>

            <LinearLayout
                android:id="@+id/lnNuong"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/mon_nuong"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    android:fontFamily="@font/times_new_roman"
                    android:text="@string/mon_nuong"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnSaute"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/mon_xao"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    android:textStyle="bold"
                    android:fontFamily="@font/times_new_roman"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/mon_xao"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnFried"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/mon_chien"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/mon_chien"/>

            </LinearLayout>

            <TextView
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                style="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:fontFamily="@font/times_new_roman"
                android:text="@string/type"/>

            <LinearLayout
                android:id="@+id/lnCow"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/thit_bo"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="@font/times_new_roman"
                    android:textStyle="bold"
                    android:text="@string/thit_bo"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnChicken"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/thit_ga"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="@font/times_new_roman"
                    android:text="@string/thit_ga"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnPig"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/thit_lon"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="@font/times_new_roman"
                    android:text="@string/thit_lon"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/hai_san"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:fontFamily="@font/times_new_roman"
                    android:text="@string/hai_san"/>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>


</LinearLayout>