<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NorthernTypeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lnCow"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/thit_bo"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:text="@string/thit_bo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/thit_ga"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/thit_ga"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/thit_lon"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/thit_lon"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:src="@drawable/hai_san"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/bg_text"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/hai_san"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>